Update code based on review comments from sonar